# pick_twitter

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
scripts/: eval_prompt.py  eval_prompt_2stage.py  evaluate.py  label_data.py  push_model.py  recheck_picks.py  search_training_data.py  train.py
